# docs/swagger.yaml
@@ -1,89 +1,5 @@
 basePath: /
 definitions:
-  domain.Bike:
-    properties:
-      bike_id:
-        type: string
-      bike_name:
-        type: string
-      components:
-        items:
-          $ref: '#/definitions/domain.Component'
-        type: array
-      created_at:
-        type: string
-      mileage:
-        type: integer
-      model:
-        description: stels
-        type: string
-      type:
-        $ref: '#/definitions/domain.BikeType'
-      updated_at:
-        type: string
-      user_id:
-        type: string
-      year:
-        type: integer
-    type: object
-  domain.BikeType:
-    enum:
-    - bmx
-    - mtb
-    - road
-    type: string
-    x-enum-varnames:
-    - BMX
-    - MTB
-    - Road
-  domain.Component:
-    properties:
-      bike_id:
-        type: string
-      brand:
-        maxLength: 100
-        type: string
-      created_at:
-        type: string
-      id:
-        type: string
-      installed_at:
-        type: string
-      installed_mileage:
-        minimum: 0
-        type: integer
-      max_mileage:
-        maximum: 1000000
-        minimum: 1
-        type: integer
-      model:
-        maxLength: 100
-        type: string
-      name:
-        allOf:
-        - $ref: '#/definitions/domain.ComponentName'
-        enum:
-        - handlebars
-        - frame
-        - wheels
-      updated_at:
-        type: string
-    required:
-    - bike_id
-    - installed_at
-    - max_mileage
-    - name
-    type: object
-  domain.ComponentName:
-    enum:
-    - handlebars
-    - frame
-    - wheels
-    type: string
-    x-enum-varnames:
-    - Handlebars
-    - Frame
-    - Wheels
   http.BikeRequest:
     properties:
       mileage:
@@ -99,20 +15,6 @@ definitions:
     - mileage
     - model
     - type
-    type: object
-  http.BikeWithUserResponse:
-    properties:
-      bike_id:
-        example: 123e4567-e89b-12d3-a456-426614174000
-        type: string
-      mileage:
-        example: 1500
-        type: integer
-      model:
-        example: Mountain Bike Pro
-        type: string
-      user:
-        $ref: '#/definitions/http.User'
     type: object
   http.ComponentRequest:
     properties:
@@ -170,15 +72,6 @@ definitions:
         example: handlebars
         type: string
     type: object
-  http.User:
-    properties:
-      name:
-        example: Иван Иванов
-        type: string
-      user_id:
-        example: 123e4567-e89b-12d3-a456-426614174000
-        type: string
-    type: object
   http.errorResponse:
     properties:
       message:
@@ -224,12 +117,7 @@ paths:
         "201":
           description: Байк создан
           schema:
-            allOf:
-            - $ref: '#/definitions/http.successResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/domain.Bike'
-              type: object
+            $ref: '#/definitions/http.successResponse'
         "400":
           description: Неверный запрос
           schema:
@@ -290,12 +178,7 @@ paths:
         "200":
           description: Байк найден
           schema:
-            allOf:
-            - $ref: '#/definitions/http.successResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/domain.Bike'
-              type: object
+            $ref: '#/definitions/http.successResponse'
         "401":
           description: Не авторизован
           schema:
@@ -335,12 +218,7 @@ paths:
         "200":
           description: Байк обновлен
           schema:
-            allOf:
-            - $ref: '#/definitions/http.successResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/domain.Bike'
-              type: object
+            $ref: '#/definitions/http.successResponse'
         "400":
           description: Неверный запрос
           schema:
@@ -375,12 +253,7 @@ paths:
         "200":
           description: Байк с компонентами
           schema:
-            allOf:
-            - $ref: '#/definitions/http.successResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/domain.Bike'
-              type: object
+            $ref: '#/definitions/http.successResponse'
         "401":
           description: Не авторизован
           schema:
@@ -411,12 +284,7 @@ paths:
         "200":
           description: Байк с пользователем
           schema:
-            allOf:
-            - $ref: '#/definitions/http.successResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/http.BikeWithUserResponse'
-              type: object
+            $ref: '#/definitions/http.successResponse'
         "401":
           description: Не авторизован
           schema:
@@ -441,14 +309,7 @@ paths:
         "200":
           description: Список байков пользователя
           schema:
-            allOf:
-            - $ref: '#/definitions/http.successResponse'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/domain.Bike'
-                  type: array
-              type: object
+            $ref: '#/definitions/http.successResponse'
         "401":
           description: Не авторизован
           schema:
