# models/domain_bike.go
@@ -1,208 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-	stderrors "errors"
-	"strconv"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// DomainBike domain bike
-//
-// swagger:model domain.Bike
-type DomainBike struct {
-
-	// bike id
-	BikeID string `json:"bike_id,omitempty"`
-
-	// bike name
-	BikeName string `json:"bike_name,omitempty"`
-
-	// components
-	Components []*DomainComponent `json:"components"`
-
-	// created at
-	CreatedAt string `json:"created_at,omitempty"`
-
-	// mileage
-	Mileage int64 `json:"mileage,omitempty"`
-
-	// stels
-	Model string `json:"model,omitempty"`
-
-	// type
-	Type DomainBikeType `json:"type,omitempty"`
-
-	// updated at
-	UpdatedAt string `json:"updated_at,omitempty"`
-
-	// user id
-	UserID string `json:"user_id,omitempty"`
-
-	// year
-	Year int64 `json:"year,omitempty"`
-}
-
-// Validate validates this domain bike
-func (m *DomainBike) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateComponents(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateType(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *DomainBike) validateComponents(formats strfmt.Registry) error {
-	if swag.IsZero(m.Components) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(m.Components); i++ {
-		if swag.IsZero(m.Components[i]) { // not required
-			continue
-		}
-
-		if m.Components[i] != nil {
-			if err := m.Components[i].Validate(formats); err != nil {
-				ve := new(errors.Validation)
-				if stderrors.As(err, &ve) {
-					return ve.ValidateName("components" + "." + strconv.Itoa(i))
-				}
-				ce := new(errors.CompositeError)
-				if stderrors.As(err, &ce) {
-					return ce.ValidateName("components" + "." + strconv.Itoa(i))
-				}
-
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-func (m *DomainBike) validateType(formats strfmt.Registry) error {
-	if swag.IsZero(m.Type) { // not required
-		return nil
-	}
-
-	if err := m.Type.Validate(formats); err != nil {
-		ve := new(errors.Validation)
-		if stderrors.As(err, &ve) {
-			return ve.ValidateName("type")
-		}
-		ce := new(errors.CompositeError)
-		if stderrors.As(err, &ce) {
-			return ce.ValidateName("type")
-		}
-
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validate this domain bike based on the context it is used
-func (m *DomainBike) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.contextValidateComponents(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.contextValidateType(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *DomainBike) contextValidateComponents(ctx context.Context, formats strfmt.Registry) error {
-
-	for i := 0; i < len(m.Components); i++ {
-
-		if m.Components[i] != nil {
-
-			if swag.IsZero(m.Components[i]) { // not required
-				return nil
-			}
-
-			if err := m.Components[i].ContextValidate(ctx, formats); err != nil {
-				ve := new(errors.Validation)
-				if stderrors.As(err, &ve) {
-					return ve.ValidateName("components" + "." + strconv.Itoa(i))
-				}
-				ce := new(errors.CompositeError)
-				if stderrors.As(err, &ce) {
-					return ce.ValidateName("components" + "." + strconv.Itoa(i))
-				}
-
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-func (m *DomainBike) contextValidateType(ctx context.Context, formats strfmt.Registry) error {
-
-	if swag.IsZero(m.Type) { // not required
-		return nil
-	}
-
-	if err := m.Type.ContextValidate(ctx, formats); err != nil {
-		ve := new(errors.Validation)
-		if stderrors.As(err, &ve) {
-			return ve.ValidateName("type")
-		}
-		ce := new(errors.CompositeError)
-		if stderrors.As(err, &ce) {
-			return ce.ValidateName("type")
-		}
-
-		return err
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *DomainBike) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *DomainBike) UnmarshalBinary(b []byte) error {
-	var res DomainBike
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
